# tictactoe_remote

./: CMakeLists.txt  README.md
include/: board.h  client.h  server.h
src/: board.cpp  client.cpp  main_client.cpp  main_server.cpp  server.cpp
